1998-08-03  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gardeb.adb: Fix a warning. In fact, gnat is over pessimistic.

	* s-gaplsp.ads.in: Add a new variable RTS_Sanity_Directory which
	is used when --with-sanity=dir is activated.

	* s-gardeb.adb: Check RTS_Sanity_Dir and create termination sanity
 	file. Two new procedures have been created:
 	Create_Termination_Sanity_File and Delete_Termination_Sanity_File.
  	Create_Termination_Sanity_File is executed during s-gardeb
 	elaboration.

	* s-garhea.adb: Execute Delete_Termination_Sanity_File when the
	termination is completed (shutdown).

	* all files: With System.Garlic.Debug when needed and elaborate it
 	first to ensure that the sanity files are created at the very
 	beginning of the elaboration. Change also debugging env. variable
	to adopt a standard naming. A package s-abcdef has now a debugging 
	env. variable of S_ABCDEF.

1998-07-31  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-parint.adb, s-parint.ads: Major cleanup which comes from the
 	major cleanup in gnatdist. Procedure Run is now in charge of the
 	elaboration, the version consistency, the excution of the main
	subprogram (if needed) and the termination. Exceptions raised at
	the level of the main subprogram are now handled and the
	termination properly executed.

	* s-garter.adb: Global_Termination can be executed by a slave and
	this will result in an immediat return. We want this behaviour
	because in the general case, the slave could help in the global
	termination detection. This is not the case in this algorithm, but 
	the code generated by gnatdist should not be dependent.

	* s-garhea.ads, s-garhea.adb: Change Elaboration_Is_Terminated in
 	Complete_Termination.

1998-07-29  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-ganobl.adb: Remove special rule when we receive 0 bytes out of 
	N (with N /= 0).

1998-07-26  Laurent Pautet  <pautet@scapin.enst.fr>

	* isthrbio.adb: New source file used to detect whether we have a