@@ -1,13 +1,22 @@
-(setenv "LOOPBACK" "D")
-(setenv "NONBLOCKING" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "INTERFACE" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "STARTUP" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "GARLIC" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "GAROPT" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "TCP" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "TERMINATION" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "PARTITION" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "RPC" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "HEART" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
-(setenv "GARTRA" "D")
-(setenv "GARREP" "D")
+(setenv "S_GAFIZI" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GANATA" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GANEUT" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GANOBL" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GAPHLO" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARFIL" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARHEA" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARNAM" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GAROPT" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARREM" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARREP" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARSTA" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARTAB" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARTCP" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARTER" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARTRA" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GARUNI" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_GASELI" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_PARINT" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_RPC" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_RPCPOO" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
+(setenv "S_RPSTIO" "C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y")
