@@ -1,13 +1,22 @@
-LOOPBACK=D
-NONBLOCKING=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-INTERFACE=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-STARTUP=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-GARLIC=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-GAROPT=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-TCP=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-TERMINATION=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-PARTITION=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-RPC=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-HEART=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
-GARREP=D
-GARTRA=D
+export S_GAFIZI=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GANATA=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GANEUT=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GANOBL=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GAPHLO=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARFIL=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARHEA=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARNAM=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GAROPT=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARREM=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARREP=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARSTA=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARTAB=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARTCP=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARTER=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARTRA=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GARUNI=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_GASELI=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_PARINT=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_RPC=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_RPCPOO=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
+export S_RPSTIO=C:D:X:E:F:I:K:L:M:P:R:Q:S:T:Z:W:G:Y
