@@ -1,15 +1,22 @@
-export NONBLOCKING=
-export INTERFACE=
-export STARTUP=
-export GARLIC=
-export GAROPT=
-export TCP=
-export TERMINATION=
-export PARTITION=
-export RPC=
-export RPCPOO=
-export HEART=
-export GARREP=
-export GARTRA=
-export FILTER=
-export PHYSICAL=
+export S_GAFIZI=
+export S_GANATA=
+export S_GANEUT=
+export S_GANOBL=
+export S_GAPHLO=
+export S_GARFIL=
+export S_GARHEA=
+export S_GARNAM=
+export S_GAROPT=
+export S_GARREM=
+export S_GARREP=
+export S_GARSTA=
+export S_GARTAB=
+export S_GARTCP=
+export S_GARTER=
+export S_GARTRA=
+export S_GARUNI=
+export S_GASELI=
+export S_PARINT=
+export S_RPC=
+export S_RPCPOO=
+export S_RPSTIO=
