@@ -1,13 +1,22 @@
-(setenv "LOOPBACK")
-(setenv "NONBLOCKING")
-(setenv "INTERFACE")
-(setenv "STARTUP")
-(setenv "GARLIC")
-(setenv "GAROPT")
-(setenv "TCP")
-(setenv "TERMINATION")
-(setenv "PARTITION")
-(setenv "RPC")
-(setenv "HEART")
-(setenv "GARTRA")
-(setenv "GARREP")
+(setenv "S_GAFIZI")
+(setenv "S_GANATA")
+(setenv "S_GANEUT")
+(setenv "S_GANOBL")
+(setenv "S_GAPHLO")
+(setenv "S_GARFIL")
+(setenv "S_GARHEA")
+(setenv "S_GARNAM")
+(setenv "S_GAROPT")
+(setenv "S_GARREM")
+(setenv "S_GARREP")
+(setenv "S_GARSTA")
+(setenv "S_GARTAB")
+(setenv "S_GARTCP")
+(setenv "S_GARTER")
+(setenv "S_GARTRA")
+(setenv "S_GARUNI")
+(setenv "S_GASELI")
+(setenv "S_PARINT")
+(setenv "S_RPC")
+(setenv "S_RPCPOO")
+(setenv "S_RPSTIO")
