@@ -1,12 +1,22 @@
-NONBLOCKING=()
-INTERFACE=()
-STARTUP=()
-GARLIC=()
-GAROPT=()
-TCP=()
-TERMINATION=()
-PARTITION=()
-RPC=()
-HEART=()
-GARREP=()
-GARTRA=()
+S_GAFIZI=()
+S_GANATA=()
+S_GANEUT=()
+S_GANOBL=()
+S_GAPHLO=()
+S_GARFIL=()
+S_GARHEA=()
+S_GARNAM=()
+S_GAROPT=()
+S_GARREM=()
+S_GARREP=()
+S_GARSTA=()
+S_GARTAB=()
+S_GARTCP=()
+S_GARTER=()
+S_GARTRA=()
+S_GARUNI=()
+S_GASELI=()
+S_PARINT=()
+S_RPC=()
+S_RPCPOO=()
+S_RPSTIO=()
